// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the Card component should accept a backgroundColor 1`] = `
<View
  cardColor="salmon"
  style={
    Object {
      "backgroundColor": "salmon",
      "borderRadius": 6,
      "shadowColor": "#dddddd",
      "shadowOffset": Object {
        "height": 1,
        "width": 0,
      },
      "shadowOpacity": 1,
      "shadowRadius": 3,
      "width": "100%",
    }
  }
>
  <View
    style={
      Object {
        "borderRadius": 6,
        "overflow": "hidden",
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
    >
      Boom!
    </Text>
  </View>
</View>
`;

exports[`the Card component should accept additional props 1`] = `
<View
  accessible={false}
  cardColor={undefined}
  style={
    Object {
      "backgroundColor": "#ffffff",
      "borderRadius": 6,
      "shadowColor": "#dddddd",
      "shadowOffset": Object {
        "height": 1,
        "width": 0,
      },
      "shadowOpacity": 1,
      "shadowRadius": 3,
      "width": "100%",
    }
  }
>
  <View
    style={
      Object {
        "borderRadius": 6,
        "overflow": "hidden",
      }
    }
  />
</View>
`;

exports[`the Card component should accept and render passed in styles 1`] = `
<View
  cardColor={undefined}
  style={
    Object {
      "backgroundColor": "#ffffff",
      "borderRadius": 6,
      "height": 400,
      "shadowColor": "#dddddd",
      "shadowOffset": Object {
        "height": 1,
        "width": 0,
      },
      "shadowOpacity": 1,
      "shadowRadius": 3,
      "width": "92%",
    }
  }
>
  <View
    style={
      Object {
        "borderRadius": 6,
        "overflow": "hidden",
      }
    }
  />
</View>
`;

exports[`the Card component should render 1`] = `
<View
  cardColor={undefined}
  style={
    Object {
      "backgroundColor": "#ffffff",
      "borderRadius": 6,
      "shadowColor": "#dddddd",
      "shadowOffset": Object {
        "height": 1,
        "width": 0,
      },
      "shadowOpacity": 1,
      "shadowRadius": 3,
      "width": "100%",
    }
  }
>
  <View
    style={
      Object {
        "borderRadius": 6,
        "overflow": "hidden",
      }
    }
  />
</View>
`;

exports[`the Card component should render children 1`] = `
<View
  cardColor={undefined}
  style={
    Object {
      "backgroundColor": "#ffffff",
      "borderRadius": 6,
      "shadowColor": "#dddddd",
      "shadowOffset": Object {
        "height": 1,
        "width": 0,
      },
      "shadowOpacity": 1,
      "shadowRadius": 3,
      "width": "100%",
    }
  }
>
  <View
    style={
      Object {
        "borderRadius": 6,
        "overflow": "hidden",
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
    >
      Boom!
    </Text>
  </View>
</View>
`;
